hw10/kuber/BillingDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-app
  namespace: otus-anton
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: billing-app
  template:
    metadata:
      labels:
        app: billing-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: billing-app
          image: antonkurudinov/otus_hw10_billing:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8002
              name: billing-port
          livenessProbe:
            httpGet:
              port: 8002
              path: /billing/health
            initialDelaySeconds: 10
            periodSeconds: 30
