hw10/kuber/DeliveryDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-app
  namespace: otus-anton
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: delivery-app
  template:
    metadata:
      labels:
        app: delivery-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: delivery-app
          image: antonkurudinov/otus_hw10_delivery:1.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8006
              name: delivery-port
          livenessProbe:
            httpGet:
              port: 8006
              path: /delivery/health
            initialDelaySeconds: 10
            periodSeconds: 30
