hw10/kuber/NotifService.yaml
apiVersion: v1
kind: Service
metadata:
  name: notif-svc
  namespace: otus-anton
spec:
  selector:
    app: notif-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: notif-port
      name: web-notif-port
  type: NodePort
