hw10/kuber/ProfileService.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-svc
  namespace: otus-anton
spec:
  selector:
    app: profile-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: profile-port
      name: web-profile-port
  type: NodePort
